Archive2/07/d196ace84bbf16/output
main.cpp: In function 'void fun()':
main.cpp:9:12: error: 'finished' was not declared in this scope
     while(!finished){
            ^
main.cpp: In function 'void fun2()':
main.cpp:14:12: error: 'finshed' was not declared in this scope
     while(!finshed){
            ^
main.cpp: In function 'int main()':
main.cpp:24:9: error: 'finished' was not declared in this scope
         finished=true;
         ^
